--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-html {
-  font-size: 100%;
-}
-
 body {
   font-size: 1.5rem;
 }
@@ -16,17 +12,34 @@ h2 {
   border-left: solid 20px #FF9900;
 }
 
-table {
-  border: solid 1px black;
-}
-td {
+table, td {
   border: solid 1px black;
 }
 
-.guide_area {
-  position: fixed;
+.top_area {
   width: 100%;
   background-color: white;
+  position: fixed;
+  top: 0px;
+}
+
+.page_title{
+  font-size: 4.0rem;
+  text-align: center;
+  margin: 10px 0px 0px 0px;
+  padding: 10px;
+  border-left: solid 30px #FF9900;
+  border-right: solid 30px #FF9900;
+}
+
+.contents_area{
+  margin: 130px 0px 0px 0px;
+}
+
+.guide_area{
+  width: 100%;
+  background-color: white;
+  position: fixed;
   margin-top: -25px;
   padding-top: 10px;
 }
@@ -71,4 +84,26 @@ td {
 
 .image01 {
   border-radius: 50%;
+}
+
+.circle {
+  border-radius: 50%;
+}
+
+.flex_contents_area{
+    width: 100%;
+    display:flex;
+    flex-wrap:wrap;
+}
+
+.flex_content_area30 {
+    padding: 10px;
+    width: 30%;
+    box-sizing: border-box;
+}
+
+.flex_content_area70 {
+    padding: 10px;
+    width: 70%;
+    box-sizing: border-box;
 }
