--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ table, td {
   bottom: 0;
   width: 100%;
   background-color: gray;
-  padding: 0px;
-  margin: 10px 10px -5px -10px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
   text-align: center;
 }
 
