--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ table, td {
   width: 100%;
   background-color: gray;
   margin: 0px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
+  padding: 5px;
   text-align: center;
 }
 
