--- a/contents/html/template/index.html
+++ b/contents/html/template/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
     <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
+    <meta property="og:type" content="article">
     <title>HTMLのXXXの使い方</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
 
     <h2 id="ID_SRC">今回作成したページのHTMLコード</h2>
     <p>実際に作成したページは<a href="./step06.html">こちら</a></p>
-    <img width=300px src="../../../images/先生02.jpg" alt="こちら">
+    <img style="width:300px;" src="../../../images/先生02.jpg" alt="こちら">
     <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step06/step06.html">こちら</a></p>
 
     <h2>感想</h2>
