--- a/css/tab.css
+++ b/css/tab.css
@@ -3,7 +3,7 @@
 }
 
 .tab_item {
-  width: calc(100%/3);
+  width: calc(100%/2);
   height: 50px;
   background-color: #DDDDDD;
   line-height: 50px;
@@ -31,13 +31,10 @@ input[name="tab_item"] {
   overflow: hidden;
 }
 
-#ID_PICTURES:checked ~ #ID_PICTURES_CONTENTS {
+#ID_TAB01:checked ~ #ID_TAB01_CONTENTS {
   display: block;
 }
-#ID_ANIMATIONS:checked ~ #ID_ANIMATIONS_CONTENTS {
-  display: block;
-}
-#ID_HP:checked ~ #ID_HP_CONTENT {
+#ID_TAB02:checked ~ #ID_TAB02_CONTENTS {
   display: block;
 }
 
