--- a/contents/template/index.html
+++ b/contents/template/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <meta charset="utf-8">
     <title>テンプレート_index</title>
+    <script type="text/javascript" src="../../js/common.js"></script>
   </head>
   <body>
     <h1>テンプレート_index</h1>
@@ -11,9 +12,8 @@
       <li><a href="./item/item.html">item</a></li>
     </ol>
 
-    <div>
-      <hr><br><br>
-      <p class="guide_area_bottom">[<a href="../../index.html">HOMEへ戻る</a>]</p>
+    <div id="ID_FOOTER">
+      <script>create_footer("ID_FOOTER",2)</script>
     </div>
 
   </body>
