--- a/contents/template/item/item.html
+++ b/contents/template/item/item.html
@@ -5,30 +5,27 @@
     <meta charset="utf-8">
     <meta property="og:type" content="article">
     <title>HTMLのXXXの使い方</title>
+    <script type="text/javascript" src="../../../js/common.js"></script>
   </head>
   <body>
     <h1 id="ID_TITLE">title</h1>
     <h2 id="ID_CONTENTS">目次</h2>
-    <ol>
-      <li><a href="#ID_H2_01">xxx</a></li>
-      <li><a href="#ID_SRC">今回作成したページのHTMLコード</a></li>
-    </ol>
+    <div id="ID_CONTENTS_LIST"></div>
 
-    <h2 id="ID_H2_01"></h2>
+    <h2>タイトル</h2>
     <pre class="code01"><code><br> &lt; TAG &gt;
     </code></pre>
 
-    <h2 id="ID_SRC">今回作成したページのHTMLコード</h2>
+    <h2>今回作成したページのHTMLコード</h2>
     <p>実際に作成したページは<a href="../item.html">こちら</a></p>
     <img style="width:300px;" src="../../../icon/先生02.jpg" alt="こちら">
     <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step06/step06.html">こちら</a></p>
 
-    <h2>感想</h2>
+    <h2 id="ID_COMMENT">感想</h2>
     <p>xxxx</p>
 
-    <div>
-      <hr><br><br>
-      <p class="guide_area_bottom">[<a href="#ID_TITLE">ページ上に戻る</a>] / [<a href="#ID_CONTENTS">目次に戻る</a>] / [<a href="../../../index.html">HOMEへ戻る</a>]</p>
+    <div id="ID_FOOTER">
+      <script>create_footer("ID_FOOTER",3)</script>
     </div>
 
   </body>
