--- a/contents/template/index.html
+++ b/contents/template/index.html
@@ -12,9 +12,9 @@
       <li><a href="./item/item.html">item</a></li>
     </ol>
 
-    <div id="ID_FOOTER">
-      <script>create_footer("ID_FOOTER",2)</script>
-    </div>
+    <div id="ID_FOOTER"></div>
+
+    <script>create_footer("ID_FOOTER",2);</script>
 
   </body>
 </html>
