--- a/contents/template/item/item.html
+++ b/contents/template/item/item.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
-    <meta property="og:type" content="article">
     <title>HTMLのXXXの使い方</title>
     <script type="text/javascript" src="../../../js/common.js"></script>
   </head>
@@ -24,9 +23,10 @@
     <h2 id="ID_COMMENT">感想</h2>
     <p>xxxx</p>
 
-    <div id="ID_FOOTER">
-      <script>create_footer("ID_FOOTER",3)</script>
-    </div>
+    <div id="ID_FOOTER"></div>
+
+    <script>create_footer("ID_FOOTER",3);</script>
+
 
   </body>
 </html>
