--- a/contents/template/item/item.html
+++ b/contents/template/item/item.html
@@ -25,7 +25,10 @@
 
     <div id="ID_FOOTER"></div>
 
-    <script>create_footer("ID_FOOTER",3);</script>
+    <script>
+      create_contents_list("ID_CONTENTS_LIST");
+      create_footer("ID_FOOTER",3);
+    </script>
 
 
   </body>
