--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,10 @@ table, th, td {
   border-radius: 50%;
 }
 
+.mypicture {
+  border: 3px solid black;
+  border-radius: 10%;
+}
 .flex_contents_area{
     width: 100%;
     display:flex;
