--- a/template/category/sub_category/topic.html
+++ b/template/category/sub_category/topic.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns#">
+<html lang="ja" dir="ltr" prefix="og: http://ogp.me/ns#">
   <head>
     <link rel="stylesheet" href="../../../css/style.css">
     <meta charset="utf-8">
-    <title>HTMLのXXXの使い方</title>
+    <title>【レゴ研鑽】HTMLのXXXの使い方</title>
+    <meta property="og:title" content="【レゴ研鑽】TITLE">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://lego-san.github.io/icon/先生01.jpg">
+    <meta property="og:url" content="https://lego-san.github.io/contents">
+    <meta property="og:description" content=”Lego遊びを通じて様々なことを学びます。”>
+    <meta property="og:site_name" content="【レゴ研鑽】Legoで遊びながら学ぶ">
     <script type="text/javascript" src="../../../js/common.js"></script>
   </head>
   <body>
-    <h1 id="ID_TITLE">title</h1>
+    <h1 id="ID_TITLE">【レゴ研鑽】title</h1>
+    <p>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
 
