--- a/template/category/sub_category/topic.html
+++ b/template/category/sub_category/topic.html
@@ -23,10 +23,10 @@
     <pre class="code01"><code><br> &lt; TAG &gt;
     </code></pre>
 
-    <h2>今回作成したページのHTMLコード</h2>
-    <p>実際に作成したページは<a href="../item.html">こちら</a></p>
+    <h2>サンプルHTMLへのリンク</h2>
+    <p>サンプルページは<a href="../step/step01_tutorial.html">こちら</a>から確認できます。</p>
     <img style="width:300px;" src="../../../icon/先生02.jpg" alt="こちら">
-    <p>HTMLコードは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step06/step06.html">こちら</a></p>
+    <p>HTMLファイルは<a href="https://github.com/lego-san/lego-san.github.io/blob/master/contents/html/step/step01_tutorial.html">こちら</a>からダウンロードできます。</p>
 
     <h2 id="ID_COMMENT">感想</h2>
     <p>xxxx</p>
