--- a/template/category/sub_category/topic.html
+++ b/template/category/sub_category/topic.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1 id="ID_TITLE">【レゴ研鑽】title</h1>
-    <p>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+    <p>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
 
     <h2 id="ID_CONTENTS">目次</h2>
     <div id="ID_CONTENTS_LIST"></div>
