--- a/template/category_index.html
+++ b/template/category_index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>【レゴ研鑽】テンプレート_index</h1>
-    <p>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPsuhください。</p>
+    <p>本ページはGitHub Pagesで構築されてますので、修正・加筆等あればお気軽にPushください。</p>
     
     <ol>
       <li><a href="./item/item.html">item</a></li>
